# ephemeral-rollups-sdk

./: .coderabbit.yaml  .gitignore  Cargo.toml  README.md  RELEASE_PROCESS.md  version_align.sh
examples/counter-anchor/: Cargo.toml  README.md  package-lock.json  package.json  program-keypair.json  tsconfig.json
examples/counter-anchor/src/: lib.rs
examples/counter-anchor/tests/: _shared.ts  kit.test.ts  web3js.test.ts
examples/intent-bundle-pinocchio/: Cargo.toml  README.md  package-lock.json  package.json  program-keypair.json
examples/intent-bundle-pinocchio/src/: lib.rs
examples/intent-bundle-pinocchio/tests/: _shared.ts  kit.test.ts  web3js.test.ts
examples/vrf-anchor/: Cargo.toml  README.md  package-lock.json  package.json  program-keypair.json
examples/vrf-anchor/src/: lib.rs
examples/vrf-anchor/tests/: _shared.ts  kit.test.ts  web3js.test.ts
rust/: Cargo.toml  rust-toolchain.toml
rust/access-control/: Cargo.toml  README.md
rust/action-attribute/: Cargo.toml  README.md
rust/action-attribute/src/: lib.rs
rust/commit-attribute/: Cargo.toml  README.md
rust/commit-attribute/src/: lib.rs
rust/delegate/: Cargo.toml  README.md
rust/delegate/src/: lib.rs
rust/ephemeral/: Cargo.toml  README.md
rust/ephemeral-accounts-attribute/: Cargo.toml  README.md
rust/ephemeral-accounts-attribute/src/: lib.rs
rust/ephemeral/src/: lib.rs
rust/permission-client/: Cargo.toml  README.md
rust/permission-client/src/: lib.rs
rust/pinocchio/: Cargo.toml  README.md  TODO.md
rust/pinocchio/src/: consts.rs  crank.rs  ephemeral_accounts.rs  error.rs  intent_bundle.rs  lib.rs  pda.rs  seeds.rs  types.rs  utils.rs
rust/pinocchio/src/access_control/: mod.rs  pda.rs  seeds.rs  structs.rs  utils.rs
rust/pinocchio/src/access_control/instructions/: close_permission.rs  commit_and_undelegate_permission.rs  commit_permission.rs  create_permission.rs  delegate_permission.rs  mod.rs  undelegate_permission.rs  update_permission.rs
rust/pinocchio/src/acl/: consts.rs  mod.rs  pda.rs  types.rs  utils.rs
rust/pinocchio/src/acl/instruction/: close_ephemeral_permission.rs  close_permission.rs  commit_and_undelegate_permission.rs  commit_permission.rs  create_ephemeral_permission.rs  create_permission.rs  delegate_permission.rs  mod.rs  update_ephemeral_permission.rs  update_permission.rs
rust/pinocchio/src/compression/: delegate.rs  initialize_record.rs  mod.rs
rust/pinocchio/src/crank/: hydra.rs  legacy.rs  mod.rs
rust/pinocchio/src/instruction/: close_permission.rs  commit.rs  commit_and_undelegate.rs  commit_and_undelegate_permission.rs  commit_permission.rs  create_permission.rs  delegate.rs  delegate_permission.rs  delegate_with_actions.rs  mod.rs  undelegate.rs  update_permission.rs
rust/pinocchio/src/intent_bundle/: args.rs  commit.rs  commit_and_undelegate.rs  mod.rs  no_vec.rs  serialize.rs  types.rs
rust/pinocchio/src/spl/: consts.rs  mod.rs  types.rs
rust/pinocchio/src/spl/instructions/: close_ephemeral_ata.rs  create_ephemeral_ata_permission.rs  delegate_ephemeral_ata.rs  delegate_ephemeral_ata_permission.rs  deposit_spl_tokens.rs  initialize_ephemeral_ata.rs  initialize_global_vault.rs  mod.rs  reset_ephemeral_ata_permission.rs  undelegate_ephemeral_ata.rs  undelegate_ephemeral_ata_permission.rs  withdraw_spl_tokens.rs
rust/pinocchio/src/vrf/: consts.rs  instruction.rs  mod.rs  pda.rs  rnd.rs  types.rs
rust/resolver/: Cargo.toml  README.md
rust/resolver/src/: account.rs  config.rs  error.rs  http.rs  lib.rs
rust/resolver/src/websocket/: base.rs  connection.rs  message.rs  mod.rs  subscription.rs
rust/resolver/src/websocket/connection/: delegations.rs  mod.rs  routes.rs
rust/sdk/: Cargo.toml  README.md  test-combinations.sh
rust/sdk/scripts/: test-combinations.sh
rust/sdk/src/: access_control.rs  anchor.rs  compat.rs  consts.rs  cpi.rs  crank.rs  delegate_args.rs  ephem.rs  ephemeral_accounts.rs  lib.rs  pda.rs  solana_compat.rs  types.rs  utils.rs  vrf.rs
rust/sdk/src/access_control/: mod.rs  programs.rs
rust/sdk/src/access_control/accounts/: mod.rs  permission.rs
rust/sdk/src/access_control/errors/: magicblock_permission_api.rs  mod.rs
rust/sdk/src/access_control/instructions/: close_ephemeral_permission.rs  close_permission.rs  commit_and_undelegate_permission.rs  commit_permission.rs  create_ephemeral_permission.rs  create_permission.rs  delegate_permission.rs  mod.rs  undelegate_permission.rs  update_ephemeral_permission.rs  update_permission.rs
rust/sdk/src/access_control/structs/: ephemeral_permission.rs  member.rs  mod.rs  permission.rs  (+2 more)
rust/sdk/src/compat/: as_modern.rs  compatize.rs  mod.rs  modern.rs
rust/sdk/src/crank/: hydra.rs  legacy.rs
rust/sdk/src/ephem/: action_builder.rs  cau_intent_builder.rs  commit_intent_builder.rs  mod.rs
rust/sdk/src/spl/: mod.rs  types.rs
rust/sdk/src/vrf/: anchor.rs  consts.rs  instructions.rs  mod.rs  rnd.rs  types.rs
rust/tests/: README.md  TEST_SUMMARY.md  access_control_test.rs  ephemeral_accounts.rs  integration_test.rs  macros_test.rs  pinocchio_test.rs  resolver_test.rs  sdk_test.rs  spl_test.rs  unit_test.rs
rust/tests/common/: fixtures.rs  mod.rs
rust/vrf-attribute/: Cargo.toml
rust/vrf-attribute/src/: lib.rs
sdk/: Cargo.toml
sdk/commit_attribute/: Cargo.toml
sdk/commit_attribute/src/: lib.rs
sdk/delegate/: Cargo.toml
sdk/delegate/src/: lib.rs
sdk/src/: anchor.rs  consts.rs  cpi.rs  delegate_args.rs  ephem.rs  er.rs  lib.rs  types.rs  utils.rs
sdk/ts/: package.json
sdk/ts/lib/: accounts.d.ts  accounts.d.ts.map  accounts.js  accounts.js.map  constants.d.ts  constants.d.ts.map  constants.js  constants.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  seeds.d.ts  seeds.d.ts.map  seeds.js  seeds.js.map
sdk/ts/lib/instructions/: trigger-commit.d.ts  trigger-commit.d.ts.map  trigger-commit.js  trigger-commit.js.map  undelegate.d.ts  undelegate.d.ts.map  undelegate.js  undelegate.js.map
sdk/ts/src/: accounts.ts  constants.ts  index.ts  seeds.ts
sdk/ts/src/instructions/: delegate.ts  trigger-commit.ts  undelegate.ts
(+256 files in other folders)
