[workspace]
members = [
    "sdk",
]

resolver = "2"

[workspace.package]
version = "0.0.6"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/delegation-program"
readme = "./README.md"
keywords = ["solana", "crypto", "delegation", "ephemeral-rollups", "magicblock"]

[workspace.dependencies]
ephemeral-rollups-sdk-attribute-delegate = { path = "sdk/delegate", version = "=0.0.6" }
ephemeral-rollups-sdk-attribute-commit = { path = "sdk/commit_attribute", version = "=0.0.6" }

## External crates
anchor-lang = "0.30.1"
borsh = "0.10.3"
paste = "^1.0"
solana-program = "^1.16"
proc-macro2 = "1.0"
syn = { version = "1.0.60", features = ["full"] }
quote = "1.0"
