[workspace]
members = [
	"sdk", 
	"ephemeral", 
	"delegate", 
	"commit-attribute",
	"action-attribute",
	"resolver",
	"pinocchio",
]

resolver = "2"

[workspace.package]
version = "0.4.1"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
edition = "2021"
license = "MIT"
homepage = "https://www.magicblock.gg/"
documentation = "https://docs.magicblock.gg/"
repository = "https://github.com/magicblock-labs/ephemeral-rollups-sdk"
readme = "README.md"
keywords = ["solana", "crypto", "delegation", "ephemeral-rollups", "magicblock"]

[workspace.dependencies]
ephemeral-rollups-sdk = { path = "sdk", version = "=0.4.1" }
ephemeral-rollups-sdk-attribute-ephemeral = { path = "ephemeral", version = "=0.4.1" }
ephemeral-rollups-sdk-attribute-delegate = { path = "delegate", version = "=0.4.1" }
ephemeral-rollups-sdk-attribute-commit = { path = "commit-attribute", version = "=0.4.1" }
ephemeral-rollups-sdk-attribute-action = { path = "action-attribute", version = "=0.4.1" }

# Magicblock
magicblock-delegation-program = { version = "1.1.3", features = ["no-entrypoint", "core"], default-features = false }
# magicblock-delegation-program = { version = "1.1.3", features = ["no-entrypoint", "sdk"], default-features = false } // updating from "core" to "sdk"
magicblock-magic-program-api = { version = "0.2.3", default-features = false }

## External crates
anchor-lang = { version = ">=0.28.0" }
proc-macro2 = "1.0"
syn = { version = "1.0.60", features = ["full"] }
quote = "1.0"
magic-domain-program = { version = "=0.0.3", features = ["disable-realloc", "modular-sdk"] }

# runtime
tokio = { version = "1.0", features = [ "rt", "sync", "macros" ] }
futures = "0.3"

# sync
parking_lot = "0.12"

# network
url = { version = "2.5", features = [ "serde" ] }
websocket = { package = "tokio-websockets", version = "0.10", features = [ "client", "simd", "native-tls", "fastrand", "openssl" ] }
reqwest = { version = "0.12" }

# solana
solana-program = { version = ">=1.16, <3.0.0", default-features = false }
solana-account = { version = ">=2" }
solana-account-info = { version = ">=2 " }
solana-cpi= { version = ">=2" }
solana-pubkey = { version = ">=2, <=2.3" }
solana-program-error = { version = ">=2" }
solana-program-memory = { version = ">=2" }
solana-system-interface = { version = ">=1", features = ["bincode"]}
solana-instruction = { version = ">=1" }
solana-sysvar = { version = ">=2"}
pinocchio = { version = "0.8.1", default-features = false }
pinocchio-log = { version = "0.4.0", default-features = false }
pinocchio-pubkey = { version = "0.2.4", default-features = false }
pinocchio-system = { version = "0.2.3", default-features = false }
pinocchio-token = { version = "0.3.0", default-features = false }

# solana alias
sdk = { package = "solana-sdk", version = ">=1.16, <3" }
rpc = { package = "solana-rpc-client", version = ">=1.16, <3" }
rpc-api = { package = "solana-rpc-client-api", version = ">=1.16, <3" }

# serialization/parsing
serde = { version = "1.0", features = [ "derive" ] }
json = { package = "sonic-rs", version = "0.3" }
borsh = "1.5.7"
humantime = "2.1"

# codec
base64 = "=0.12"
bs58 = "0.5"
bincode = "^1.3"
zstd = "0.13"

# containers
scc = "2.2.5"
smallvec = { version = "1.13", features = [ "serde" ] }

# logging
tracing = "0.1"

# misc
thiserror = "1.0"

# Fix for older toolchain
base64ct = "=1.6.0"
