[workspace]
members = [
    "action-attribute",
    "commit-attribute",
    "delegate",
    "ephemeral",
    "ephemeral-accounts-attribute",
    "pinocchio",
    "resolver",
    "sdk",
]

resolver = "2"

[workspace.package]
version = "0.12.0"
authors = ["Magicblock Labs <dev@magicblock.gg>"]
documentation = "https://docs.magicblock.gg/"
edition = "2021"
homepage = "https://www.magicblock.gg/"
keywords = ["crypto", "delegation", "ephemeral-rollups", "magicblock", "solana"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/magicblock-labs/ephemeral-rollups-sdk"

[workspace.dependencies]
ephemeral-rollups-sdk = { path = "sdk", version = "=0.12.0" }
ephemeral-rollups-sdk-attribute-ephemeral = { path = "ephemeral", version = "=0.12.0" }
ephemeral-rollups-sdk-attribute-ephemeral-accounts = { path = "ephemeral-accounts-attribute", version = "=0.12.0" }
ephemeral-rollups-sdk-attribute-delegate = { path = "delegate", version = "=0.12.0" }
ephemeral-rollups-sdk-attribute-commit = { path = "commit-attribute", version = "=0.12.0" }
ephemeral-rollups-sdk-attribute-action = { path = "action-attribute", version = "=0.12.0" }


# Magicblock
magicblock-delegation-program-api = { git = "https://github.com/magicblock-labs/delegation-program.git", branch = "snawaz/upgrade", default-features = false }
magicblock-magic-program-api = { git = "https://github.com/magicblock-labs/magicblock-validator.git", branch = "bmuddha/epic/migration-solana-v3", default-features = false }

## External crates
anchor-lang = { version = ">=0.28.0" }
magic-domain-program = { version = "0.3.0" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.60", features = ["full"] }

# runtime
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }

# sync
parking_lot = "0.12"

# network
reqwest = { version = "0.12" }
url = { version = "2.5", features = ["serde"] }
websocket = { package = "tokio-websockets", version = "0.10", features = [
    "client",
    "fastrand",
    "native-tls",
    "openssl",
    "simd",
] }

# solana
pinocchio = { version = "0.10", default-features = false, features = [
    "alloc",
    "cpi",
] }
pinocchio-log = { version = "0.5", default-features = false }
pinocchio-pubkey = { version = "0.3", default-features = false, features = [
    "const",
] }
pinocchio-system = { version = "0.5", default-features = false }
pinocchio-token = { version = "0.5", default-features = false }
solana-account = { version = ">=2, <4" }
solana-account-info = { version = ">=2, <4" }
solana-address = { version = ">=2, <4" }
solana-commitment-config = { version = ">=2, <4", features = ["serde"] }
solana-cpi = { version = ">=2, <4" }
solana-instruction = { version = ">=1, <4" }
solana-keypair = { version = ">=2, <4" }
solana-program = { version = ">=1.16, <4", default-features = false }
solana-program-error = { version = ">=2, <4" }
solana-program-memory = { version = ">=2, <4" }
solana-pubkey = { version = ">=2, <4" }
solana-signer = { version = ">=2, <4" }
solana-system-interface = { version = ">=1, <4", features = ["bincode"] }
solana-sysvar = { version = ">=2, <4" }
solana-transaction = { version = ">=2, <4" }
spl-associated-token-account-interface = { version = "1.0.0" }

# solana alias
rpc = { package = "solana-rpc-client", version = ">=1.16, <4" }
rpc-api = { package = "solana-rpc-client-api", version = ">=1.16, <4" }

# serialization/parsing
borsh = "1.5.7"
humantime = "2.1"
json = { package = "sonic-rs", version = "0.3" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.16" }

# codec
base64 = "0.12"
bincode = "1.3.3"
bs58 = "0.5"
zstd = "0.13"

# containers
scc = "2.2.5"
smallvec = { version = "1.13", features = ["serde"] }

# logging
tracing = "0.1"

# misc
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0"

# Fix for older toolchain
base64ct = "=1.6.0"
