[package]
name = "ephemeral-rollups-sdk"
description = "Ephemeral Rollups Integration SDK"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
ephemeral-rollups-sdk-attribute-delegate = { workspace = true }
paste = { workspace = true }
solana-program = { workspace = true }
