[package]
name = "magicblock-permission-client"
description = "A Rust client for the MagicBlock Permission Program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
license = { workspace = true }
edition = { workspace = true }

[features]
serde = ["dep:serde", "dep:serde_with"]
anchor = []

[dependencies]
borsh = "^1.5.7"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "2.2, <3"
thiserror = "^1.0"

[lints.rust.non_local_definitions]
level = "allow"
