[package]
authors = { workspace = true }
description = "ephemeral-rollups-sdk-attribute-commit"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "ephemeral-rollups-sdk-attribute-commit"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lib]
proc-macro = true
