[package]
authors = { workspace = true }
description = "ephemeral-rollups-sdk-attribute-delegate"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "ephemeral-rollups-sdk-attribute-delegate"
repository = { workspace = true }
version = { workspace = true }

[features]
default = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
