[package]
name = "ephemeral-rollups-sdk-attribute-ephemeral-accounts"
description = "Procedural macro for ephemeral accounts in Ephemeral Rollups"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
