[package]
authors = { workspace = true }
description = "Procedural macro for ephemeral accounts in Ephemeral Rollups"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "ephemeral-rollups-sdk-attribute-ephemeral-accounts"
repository = { workspace = true }
version = { workspace = true }

[features]
default = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
