[package]
name = "ephemeral-rollups-pinocchio"
description = "Ephemeral Rollups Integration Pinocchio"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
license = { workspace = true }
edition = { workspace = true }

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true, default-features = false, features = [
    "const",
] }
pinocchio-system = { workspace = true, default-features = false }
solana-address = { workspace = true, default-features = false, features = [
    "curve25519",
    "serde",
] }
solana-program = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = [
    "derive",
], optional = true }
bincode = { version = "2.0.1", default-features = false, features = [
    "derive",
    "serde",
], optional = true }
magicblock-delegation-program-api = { workspace = true, optional = true }
borsh = { workspace = true, optional = true }

[dev-dependencies]
bincode1 = { package = "bincode", version = "1.3" }
magicblock-magic-program-api = { workspace = true }
ephemeral-rollups-sdk = { workspace = true }
solana-program = { workspace = true }
solana-instruction = { workspace = true }

[features]
default = []
delegation-actions = [
    "borsh",
    "serde",
    "pinocchio/alloc",
    "pinocchio/cpi",
    "magicblock-delegation-program-api",
]
intent-bundle = ["bincode", "serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(target_os, values(\"solana\"))",
] }
