[package]
authors = { workspace = true }
description = "Ephemeral Rollups Integration Pinocchio"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "ephemeral-rollups-pinocchio"
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["derive"] }
borsh = { workspace = true, optional = true }
magicblock-delegation-program-api = { workspace = true, optional = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true, default-features = false, features = [
    "const",
] }
pinocchio-system = { workspace = true, default-features = false }
pinocchio-log = { workspace = true }
solana-address = { version = ">=2, <3", default-features = false, features = [
    "curve25519",
] }
solana-program = { workspace = true, default-features = false }

[dev-dependencies]
bincode1 = { package = "bincode", version = "1.3" }
ephemeral-rollups-sdk = { workspace = true }
magicblock-magic-program-api = { workspace = true }
solana-instruction = { workspace = true }
solana-program = { workspace = true }

[features]
default = []
delegation-actions = [
    "borsh",
    "magicblock-delegation-program-api",
    "pinocchio/alloc",
    "pinocchio/cpi",
]
# Compatibility no-op for downstream manifests; remove in the next breaking release.
intent-bundle = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(target_os, values(\"solana\"))",
] }
