[package]
name = "magic-resolver"
description = "Connection resolver for ephemeral rollups"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ephemeral-rollups-sdk = { workspace = true }

## External crates

# runtime
tokio = { workspace = true }
futures = { workspace = true }

# network
url = { workspace = true }
websocket = { workspace = true }
reqwest = { workspace = true }

# solana
sdk = { workspace = true }
rpc = { workspace = true }
rpc-api = { workspace = true }

# parsing
serde = { workspace = true }
json = { workspace = true }
humantime = { workspace = true }

# codec
base64 = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }

# containers
scc = { workspace = true }
smallvec = { workspace = true }

# logging
tracing = { workspace = true }

# misc 
thiserror = { workspace = true }
