[package]
name = "magic-resolver"
description = "Connection resolver for ephemeral rollups"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
readme = "README.md"
license = { workspace = true }
edition = { workspace = true }

[dependencies]
ephemeral-rollups-sdk = { workspace = true }
magic-domain-program = { workspace = true }

## External crates

# runtime
tokio = { workspace = true }
futures = { workspace = true }

# sync
parking_lot = { workspace = true }

# network
url = { workspace = true }
websocket = { workspace = true }
reqwest = { workspace = true }

# solana
sdk = { workspace = true }
rpc = { workspace = true }
rpc-api = { workspace = true }
solana-program = { version = "<3" }

# serialization/parsing
serde = { workspace = true }
json = { workspace = true }
humantime = { workspace = true }
borsh = { workspace = true } 

# codec
base64 = { workspace = true }
bs58 = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }

# containers
scc = { workspace = true }
smallvec = { workspace = true }

# logging
tracing = { workspace = true }

# misc 
thiserror = { workspace = true }
