[package]
authors = { workspace = true }
description = "Connection resolver for ephemeral rollups"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "magic-resolver"
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
ephemeral-rollups-sdk = { workspace = true }
magic-domain-program = { workspace = true }

## External crates

# runtime
futures = { workspace = true }
tokio = { workspace = true }

# sync
parking_lot = { workspace = true }

# network
reqwest = { workspace = true }
url = { workspace = true }
websocket = { workspace = true }

# solana
rpc = { workspace = true }
rpc-api = { workspace = true }
solana-account = { workspace = true }
solana-address = { workspace = true }
solana-commitment-config = { workspace = true }
solana-program = { workspace = true }
solana-transaction = { workspace = true }

# serialization/parsing
borsh = { workspace = true }
humantime = { workspace = true }
json = { workspace = true }
serde = { workspace = true, default-features = true }

# codec
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
zstd = { workspace = true }

# containers
scc = { workspace = true }
smallvec = { workspace = true }

# logging
tracing = { workspace = true }

# misc 
thiserror = { workspace = true }
