[package]
authors = { workspace = true }
description = "Ephemeral Rollups Integration SDK"
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "ephemeral-rollups-sdk"
readme = "README.md"
repository = { workspace = true }
version = { workspace = true }

[features]
access-control = ["num-derive", "num-traits", "thiserror"]
anchor = ["anchor-lang"]
anchor-debug = []
crank = []
custom-heap = []
custom-panic = []
default = ["solana-program", "solana-system-interface"]
disable-realloc = []
encryption = [
    "magicblock-delegation-program-api/encryption",
    "magicblock-delegation-program-api/instruction",
]
modular-sdk = [
    "solana-account",
    "solana-account-info",
    "solana-cpi",
    "solana-instruction",
    "solana-program-error",
    "solana-program-memory",
    "solana-pubkey",
    "solana-system-interface",
    "solana-sysvar",
]
serde = []
spl = ["encryption", "spl-associated-token-account-interface"]


[dependencies]
anchor-lang = { workspace = true, optional = true }
bincode = { workspace = true }
borsh = { workspace = true }
ephemeral-rollups-sdk-attribute-action = { workspace = true }
ephemeral-rollups-sdk-attribute-commit = { workspace = true }
ephemeral-rollups-sdk-attribute-delegate = { workspace = true }
ephemeral-rollups-sdk-attribute-ephemeral = { workspace = true }
ephemeral-rollups-sdk-attribute-ephemeral-accounts = { workspace = true }
magicblock-delegation-program-api = { workspace = true, default-features = false }
magicblock-magic-program-api = { workspace = true }
num-derive = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
solana-account = { workspace = true, optional = true }
solana-account-info = { workspace = true, optional = true }
solana-cpi = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }
solana-program-error = { workspace = true, optional = true }
solana-program-memory = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true }
solana-system-interface = { workspace = true, optional = true }
solana-sysvar = { workspace = true, optional = true }
spl-associated-token-account-interface = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# Fix for older toolchain
base64ct = { workspace = true }
getrandom = { version = "^0.2", features = ["custom"] }

[[test]]
name = "integration_test"
path = "../tests/integration_test.rs"

[[test]]
name = "unit_test"
path = "../tests/unit_test.rs"

[[test]]
name = "access_control_test"
path = "../tests/access_control_test.rs"
required-features = ["access-control", "modular-sdk"]

[[test]]
name = "pinocchio_test"
path = "../tests/pinocchio_test.rs"

[[test]]
name = "resolver_test"
path = "../tests/resolver_test.rs"

[[test]]
name = "sdk_test"
path = "../tests/sdk_test.rs"

[[test]]
name = "macros_test"
path = "../tests/macros_test.rs"

[[test]]
name = "spl_test"
path = "../tests/spl_test.rs"
required-features = ["access-control", "modular-sdk", "spl"]

[dev-dependencies]
bincode = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
