[package]
name = "ephemeral-rollups-sdk"
description = "Ephemeral Rollups Integration SDK"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = "README.md"

[features]
default = [
		"solana-system-interface"
]

# =============== modern ===============
# 
# As long as neither anchor-compat nor backward-compat is 
# specified, all features support Solana 3.0 and Anchor 1.0.
#
# To get backward compatability, combine any flag with backward-compat. 
# However, for anchor <1.0 support, use anchor-compat (and backward-compat is implied). 
#

# anchor 1.0 support (CANNOT be combined with backward-compat) 
anchor = ["anchor-modern"]
anchor-modern = ["anchor-support", "anchor-lang-current"]

# anchor >=0.28.0, <1.0 support (backward-compat is implied)
anchor-compat = [
    "anchor-support",
    "backward-compat",
    "anchor-lang-compat",
]

# access-control support (can be combined with [anchor-compat | anchor | backward-compat]) 
access-control = ["num-derive", "num-traits", "thiserror"]

# spl support.
spl = ["spl-associated-token-account-interface", "encryption"]

encryption = [
    "magicblock-delegation-program-api/encryption",
    "magicblock-delegation-program-api/instruction",
]

# backward compatability support (can be combined with [access-control | encryption])
backward-compat = ["magicblock-delegation-program-api/backward-compat"]

crank = []
disable-realloc = []
modular-sdk = [
    "solana-account",
    "solana-account-info",
    "solana-cpi",
    "solana-instruction",
    "solana-pubkey",
    "solana-program-error",
    "solana-program-memory",
    "solana-sysvar",
    "solana-system-interface",
]
custom-heap = []
custom-panic = []
anchor-debug = []
serde = []

# =========== internal features ===========
anchor-support = []
#anchor-compat-idl-build = ["anchor-compat", "anchor-lang-compat/idl-build"]

[dependencies]
anchor-lang-compat = { workspace = true, optional = true }
anchor-lang-current = { workspace = true, optional = true }
# borsh = "0.10.4"
bincode = { workspace = true }
ephemeral-rollups-sdk-attribute-delegate = { workspace = true }
ephemeral-rollups-sdk-attribute-ephemeral = { workspace = true }
ephemeral-rollups-sdk-attribute-ephemeral-accounts = { workspace = true }
ephemeral-rollups-sdk-attribute-commit = { workspace = true }
ephemeral-rollups-sdk-attribute-action = { workspace = true }
solana-program = { workspace = true }
solana-address = { workspace = true }
solana-account = { workspace = true, optional = true }
solana-account-info = { workspace = true, optional = true }
solana-cpi = { workspace = true, optional = true }
solana-instruction = { workspace = true, optional = true }
solana-pubkey = { workspace = true, optional = true }
solana-program-error = { workspace = true, optional = true }
solana-program-memory = { workspace = true, optional = true }
solana-system-interface = { workspace = true, optional = true }
solana-sysvar = { workspace = true, optional = true }
spl-associated-token-account-interface = { workspace = true, optional = true }
magicblock-magic-program-api = { workspace = true }
magicblock-delegation-program-api = { workspace = true, default-features = false }
num-derive = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

solana-account-info-compat = { workspace = true }
solana-program-error-compat = { workspace = true }
solana-program-compat = { workspace = true }

# Fix for older toolchain
base64ct = { workspace = true }
getrandom = { version = "^0.2", features = ["custom"] }

# Manually resolve to fix five8::decode_64 related error
five8 = { version = "0.2", features = ["std"] }

[[test]]
name = "integration_test"
path = "../tests/integration_test.rs"

[[test]]
name = "unit_test"
path = "../tests/unit_test.rs"

[[test]]
name = "access_control_test"
path = "../tests/access_control_test.rs"
required-features = ["access-control", "modular-sdk"]

[[test]]
name = "pinocchio_test"
path = "../tests/pinocchio_test.rs"

[[test]]
name = "resolver_test"
path = "../tests/resolver_test.rs"

[[test]]
name = "sdk_test"
path = "../tests/sdk_test.rs"

[[test]]
name = "macros_test"
path = "../tests/macros_test.rs"

[[test]]
name = "spl_test"
path = "../tests/spl_test.rs"
required-features = ["spl", "access-control", "modular-sdk"]

[dev-dependencies]
bincode = { workspace = true }
sdk = { workspace = true }
