[package]
name = "ephemeral-rollups-sdk-attribute-commit"
description = "ephemeral-rollups-sdk-attribute-commit"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }

[lib]
proc-macro = true
